# project_nao

./: README.md  Sandbox
experimental/: CMakeLists.txt  autoload.ini  helloworld.cpp  main.cpp  usefull_commands
experimental/BlobDetection/: Blob.cbp  DetectSkinBlobs.cpp
experimental/BlobDetection/cvBlobsLib/: URL.txt
experimental/BlobDetection/cvBlobsLib/src/: BlobOperators.h  BlobResult.cpp  BlobResult.h  HOWTO_build_cvblobslib.txt  cvblobslib.dsp  cvblobslib.plg  cvblobslib.sln  cvblobslib.vcproj
experimental/BlobDetectionNao/: BlobDetection.cpp  BlobDetection.h  CMakeLists.txt  qiproject.xml
experimental/BlobDetectionNaoTest/: BlobDetection.cpp  BlobDetection.h  CMakeLists.txt  main.cpp
experimental/FingerDetection/: main.cpp
experimental/HsvValueSlider/: RangeDetection.cbp  main.cpp
experimental/MovementDetection/: HandDetection.cbp  main.cpp
experimental/NaoGestureRecognition/: CMakeLists.txt  Nao.cpp  Nao.h  NaoGestureRecognition.cpp  NaoGestureRecognition.h  main.cpp  states.h
experimental/NaoGestureRecognition/cvblob/: BlobContour.cpp  BlobContour.h
experimental/ThreadTest/: CMakeLists.txt  ThreadTest.cpp  ThreadTest.h  main.cpp  qiproject.xml
experimental/capturevideo/: CMakeLists.txt  capturevideo.cpp  qiproject.xml
experimental/choregraphe/: Demo.crg  parallel.crg  sit_arm_both_down.crg  sit_arm_both_up.crg  sit_arm_left_up.crg  sit_arm_right_up.crg
experimental/cvblob/: ComponentLabeling.h  blob.h
experimental/debug_test/: dbg.c  usefull_commands_(gdb)
experimental/getimage/: getimages.cpp
experimental/math/: angles.cpp  angles.h
experimental/recordvideo/: CMakeLists.txt  qiproject.xml  recordvideo.cpp
experimental/twomodules/: CMakeLists.txt  RecordVid.cpp  RecordVid.h  Walk.cpp  Walk.h  main.cpp  qiproject.xml
src/: CMakeLists.txt  Nao.cpp  Nao.h  NaoGestureRecognition.cpp  NaoGestureRecognition.h  action.h  action.hpp  camera.cpp  camera.h  camera.hpp  configuration.h  configuration.hpp  gestrures.h  gestures.h  gestures.hpp  main.c  main.cpp  qiproject.xml  shapes.hpp
src/math/: angles.cpp  angles.h
